<resources>
    <string name="app_name">SafeCash</string>
    <string name="usuario">Usuario</string>
    <string name="user">Correo</string>
    <string name="password">Contraseña</string>
    <string name="enter">Ingresar</string>
    <string name="new_account">"Crear cuenta "</string>
    <string name="name">Nombre</string>
    <string name="last_name">Apellidos</string>
    <string name="email">Correo</string>
    <string name="repeat_password">Repetir Contraseña</string>
    <string name="age">Edad</string>
    <string name="female">Femenino</string>
    <string name="male">Masculino</string>
    <string name="register">Registrar</string>
    <string name="password_recovery">¿Olvidaste tu contraseña?</string>
    <string name="o">o</string>
    <string name="conector">O</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="balance">Saldo:</string>
    <string name="buttonhome">Hogar</string>
    <string name="buttonhealth">Health</string>
    <string name="buttonmarket">Mercado</string>
    <string name="buttontransport">Transporte</string>
    <string name="buttonpets">Mascotas</string>
    <string name="buttonphone">Telefono</string>
    <string name="buttonbeauty">Belleza</string>
    <string name="buttonentertainment">Entretenimiento</string>
    <string name="buttoncloth">Ropa</string>
    <string name="buttoncar">Automovil</string>
    <string name="valueBalance">0</string>
    <string name="deductible">Deducibles</string>
    <string name="Income">Ingresos</string>
    <string name="costs">Gastos</string>
    <string name="incometotal">Total ingresos:</string>
    <string name="presentvalue">Valor actual mes:</string>
    <string name="value">Ingresar valor</string>
    <string name="salary">Salario</string>
    <string name="saving">Ahorro</string>
    <string name="extra">Extras</string>
    <string name="add">Agregar</string>
    <string name="choose_category">Elige una categoria</string>
    <string name="shopping">¿Que compraste?</string>
    <string name="totaldeductible">Total deducibles:</string>
    <string name="note">Ingresa una nota</string>
    <string name="dateinco">Año-Mes-Dia</string>
    <string name="datecost">Año-Mes-Dia</string>
    <string name="type_Deductible">Tipo de deducible:</string>


    <string-array name="category_list" >
        <item>Seleciona</item>
        <item>Casa</item>
        <item>Salud</item>
        <item>Mercado</item>
        <item>Transporte</item>
        <item>Mascotas</item>
        <item>Telefono</item>
        <item>Belleza</item>
        <item>Entretenimiento</item>
        <item>Ropa</item>
        <item>Carro</item>
    </string-array>

    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_main">Principal</string>
    <string name="title_income">Ingresos</string>
    <string name="title_costs">Gastos</string>
    <string name="title_deductibles">Deducibles</string>
    <string name="title_perfil">Perfil</string>
    <string name="title_activity_bottom_navigation_main">BottomNavigationMainActivity</string>
    <string name="PurchaseDate">Elige la fecha de compra</string>
    <string name="newIncome">Nuevo Ingreso</string>
    <string name="title_activity_ensayo">EnsayoActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="typeincome">Ingreso:</string>
    <string name="valueincome">Valor:</string>
    <string name="tipoincome">Tipo de ingreso:</string>
    <string name="tipo">¿De que?</string>
    <string name="dateincome">Fecha (Año-Mes-Dia):</string>
    <string name="newincome">Nuevo Ingreso</string>
    <string name="newcost">Nuevo Gasto</string>
    <string name="newdeductible">Nuevo Deducible</string>
    <string name="category">Categoria</string>
    <string name="datededuc">Año-Mes-Dia</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="correo">Correo</string>
    <string name="nameuser">Usuario</string>
    <string name="closesesion">Cerrar sesion</string>
    <string name="tipogasto">Tipo de gasto:</string>

</resources>