<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.newincome.NewIncomeFragment">

    <TextView
        android:id="@+id/currentvalue_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="66dp"
        android:gravity="center"
        android:text="@string/newIncome"
        android:textColor="@color/maincolor"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/valueincome_InputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:textColorHint="@color/colorMainHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentvalue_text_view">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/value_income_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/value"
            android:inputType="number|numberDecimal|numberSigned"
            android:textColor="@color/maincolor"
            android:textColorHighlight="@color/maincolor"
            android:textColorHint="@color/maincolor" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/noteincome_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:textColorHint="@color/colorMainHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/valueincome_InputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/note_income_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/note"
            android:textColor="@color/maincolor"
            android:textColorHighlight="@color/maincolor"
            android:textColorHint="@color/maincolor" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dateincome_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:textColorHint="@color/colorMainHint"
        app:helperText="@string/PurchaseDate"
        app:helperTextEnabled="true"
        app:helperTextTextAppearance="@style/TextAppearance.AppCompat.Body2"
        app:helperTextTextColor="@color/maincolor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noteincome_input_layout">

        <TextView
            android:id="@+id/date_income_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="false"
            android:hint="@string/date"
            android:textColor="@color/maincolor"
            android:textColorHighlight="@color/maincolor"
            android:textColorHint="@color/maincolor"
            tools:ignore="TouchTargetSizeCheck"/>
    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateincome_input_layout">

        <RadioButton
            android:id="@+id/salary_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:checked="true"
            android:text="@string/salary"
            android:textColor="@color/maincolor"
            android:textColorHighlight="@color/maincolor"
            android:textColorHint="@color/maincolor" />

        <RadioButton
            android:id="@+id/saving_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/saving"
            android:textColor="@color/maincolor"
            android:textColorHighlight="@color/maincolor"
            android:textColorHint="@color/maincolor" />

        <RadioButton
            android:id="@+id/extra_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/extra"
            android:textColor="@color/maincolor"
            android:textColorHighlight="@color/maincolor"
            android:textColorHint="@color/maincolor" />
    </RadioGroup>

    <Button
        android:id="@+id/addincome_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="16dp"
        android:text="@string/add"
        android:textColor="@color/textcolor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>